<resources>
    <string name="app_name">fastcam</string>
    <string name="edithint">자연수를 입력해주세요.</string>
    <string name="fastcampus_class_projects">FastCampus Class Projects</string>
    <string name="chap3">Chapter 3 : 단위 변환기</string>
    <string name="chapter_4">Chapter 4 : 응급 의료정보 앱</string>
    <string name="name_label">이름</string>
    <string name="birth_label">생년월일</string>
    <string name="chapter_5">Chapter 5 : 계산기</string>
    <string name="chapter_6">Chapter 6 : 스톱워치</string>
    <string name="chapter_8">Chapter 8 : 나만의 액자(갤러리)</string>
    <string name="chapter_7">Chapter 7 : 나만의 단어장</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="blood_type_list">
        <item>A</item>
        <item>AB</item>
        <item>B</item>
        <item>0</item>
    </string-array>

</resources>