<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingBottom="50dp"
        >
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fastcampus_class_projects"
            android:layout_marginTop="50dp"
            android:textSize="18sp"
            android:textStyle="bold"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="30dp"
            android:id="@+id/chap3_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_whitey_radi24"
            android:text="@string/chap3"
            android:textAllCaps="false"
            android:textColor="@color/black"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/chap4_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_whitey_radi24"
            android:text="@string/chapter_4"
            android:textAllCaps="false"
            android:textColor="@color/black"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/chap5_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_whitey_radi24"
            android:text="@string/chapter_5"
            android:textAllCaps="false"
            android:textColor="@color/black"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/chap6_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_whitey_radi24"
            android:text="@string/chapter_6"
            android:textAllCaps="false"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/chap7_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_whitey_radi24"
            android:text="@string/chapter_7"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/chap8_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_whitey_radi24"
            android:text="@string/chapter_8"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/chap9_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_whitey_radi24"
            android:text="Chpater 9 : 음악재생 앱"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            />

    </LinearLayout>
</ScrollView>